--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,11 +1,5 @@
-// lines above are onlu for test
-// feel free to delete it
-.test {
-  &::after {
-    content: "LESS is ready";
-  }
-}
+@import 'variables';
 
-#app {
-  .test;
+body {
+  color: @colorMain;
 }
