add less styles: mixins, styles for components

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,5 +1,16 @@
-@import 'variables';
+@import "variables";
+@import "header";
+@import "hero";
+
+@import "../../node_modules/slick-carousel/slick/slick";
+@import "../../node_modules/slick-carousel/slick/slick-theme";
 
 body {
-  color: @colorMain;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+
+.container {
+  max-width: 980px;
+  margin: 0 auto;
 }
