add npm packages

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -73,7 +73,7 @@ header {
     }
 
     .langSelect__dropdown-indicator svg {
-      fill: @colorLight;
+      fill: @colorLinkAlt;
     }
 
     .langSelect__menu {
@@ -84,9 +84,11 @@ header {
       opacity: 0.7;
       background-color: transparent;
     }
+
     .langSelect__option--is-focused {
       opacity: 1;
     }
+
     .langSelect__option--is-selected {
       opacity: 1;
     }
