--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,3 +1,7 @@
 @colorMain: #ccc;
 @colorLight: #ffffff;
 @colorLinkAlt: #cad636;
+@colorGreen: #467035;
+
+@fontFamilyDefault: ~"Arial, Helvetica, sans-serif";
+@fontFamilyAharoni: ~'"Aharoni", "Lucida Grande", Arial, Helvetica, sans-serif';
