--- a/src/less/hero.less
+++ b/src/less/hero.less
@@ -2,10 +2,15 @@
 @import "mixins";
 
 .hero {
-  background-color: #716206;
+  background-color: #a79f67;
   padding-top: 270px;
   color: @colorLight;
   position: relative;
+
+  h1 {
+    .font(53px, 1);
+    font-family: @fontFamilyAharoni;
+  }
 
   .container {
     position: relative;
@@ -34,5 +39,30 @@
   .heroCarouselItem {
     height: 802px;
     background-size: cover;
+  }
+
+  .heroFeaturesBlock {
+    .flex-display();
+    margin-top: 100px;
+  }
+
+  .heroFeatures {
+    .font(12px, 1.2, normal);
+    .flex-display();
+    .flex-direction(column);
+    .flex-basis(100%);
+    border-left: 1px solid @colorLight;
+    padding: 4px 6px;
+    height: 120px;
+
+    &:last-child {
+      border-right: 1px solid @colorLight;
+    }
+
+    img {
+      max-width: 40px;
+      height: auto;
+      margin-bottom: 10px;
+    }
   }
 }
