--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,12 +1,11 @@
 @import "variables";
-@import "header";
-@import "hero";
+@import "fonts";
 
 @import "../../node_modules/slick-carousel/slick/slick";
 @import "../../node_modules/slick-carousel/slick/slick-theme";
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: @fontFamilyDefault;
   margin: 0;
 }
 
@@ -14,3 +13,16 @@ body {
   max-width: 980px;
   margin: 0 auto;
 }
+
+.connectBtn {
+  height: 47px;
+  .font(18px, 47px, bold);
+  border-radius: 5px;
+  color: @colorGreen;
+  font-family: @fontFamilyAharoni;
+  background-color: @colorLight;
+  padding: 0 46px;
+}
+
+@import "header";
+@import "hero";
