add Company block styles

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -2,6 +2,7 @@
 @colorLight: #ffffff;
 @colorLinkAlt: #cad636;
 @colorGreen: #467035;
+@colorGreenDark: #101c0b;
 
 @fontFamilyDefault: ~"Arial, Helvetica, sans-serif";
 @fontFamilyAharoni: ~'"Aharoni", "Lucida Grande", Arial, Helvetica, sans-serif';
