--- a/src/less/main.less
+++ b/src/less/main.less
@@ -24,6 +24,12 @@ body {
   padding: 0 46px;
 }
 
+@media only screen and (max-width: 767px) {
+  .container {
+    padding: 0 10px;
+  }
+}
+
 @import "header";
 @import "hero";
 @import "company";
