add styles for product section

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -3,6 +3,8 @@
 @colorLinkAlt: #cad636;
 @colorGreen: #467035;
 @colorGreenDark: #101c0b;
+@colorYellow: #ebc809;
+@colorGray: #f9f9f9;
 
 @fontFamilyDefault: ~"Arial, Helvetica, sans-serif";
 @fontFamilyAharoni: ~'"Aharoni", "Lucida Grande", Arial, Helvetica, sans-serif';
