--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -2,6 +2,7 @@
 @colorLight: #ffffff;
 @colorLinkAlt: #cad636;
 @colorGreen: #467035;
+@colorGreenLighter: #547A31;
 @colorGreenDark: #101c0b;
 @colorYellow: #ebc809;
 @colorGray: #f9f9f9;
