fix image parallax UI

--- a/src/less/img-parallax.less
+++ b/src/less/img-parallax.less
@@ -2,8 +2,9 @@
 @import "mixins";
 
 .parallaxImage {
-	width: 100%;
-	padding-top: 55%;
-	background-size: 100% auto;
-	background-position-y: bottom;
+  width: 100%;
+  padding-top: 55%;
+  background-size: 100% auto;
+  background-position-y: 0px;
+  background-color: @colorLight;
 }
