change fonts properties

--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: "Aharoni";
-  src: url("../fonts/Aharoni-Bold.woff2") format("woff2"),
-    url("../fonts/Aharoni-Bold.woff") format("woff");
+  font-family: "Roboto";
+  src: url("../fonts/roboto-700.woff2") format("woff2"),
+    url("../fonts/roboto-700.woff") format("woff");
   font-weight: bold;
   font-style: normal;
 }
