--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -2,10 +2,10 @@
 @colorLight: #ffffff;
 @colorLinkAlt: #cad636;
 @colorGreen: #467035;
-@colorGreenLighter: #547A31;
+@colorGreenLighter: #547a31;
 @colorGreenDark: #101c0b;
 @colorYellow: #ebc809;
 @colorGray: #f9f9f9;
 
 @fontFamilyDefault: ~"Arial, Helvetica, sans-serif";
-@fontFamilyAharoni: ~'"Aharoni", "Lucida Grande", Arial, Helvetica, sans-serif';
+@fontFamilyAharoni: ~'"Roboto", "Lucida Grande", Arial, Helvetica, sans-serif';
