refactor less folder structure

--- a/src/less/components/columns.less
+++ b/src/less/components/columns.less
@@ -1,5 +1,5 @@
-@import "variables";
-@import "mixins";
+@import "../variables";
+@import "../mixins";
 
 .columnsBlock {
   .titleBlock {
@@ -47,6 +47,7 @@
     .columnText {
       .flex-basis(41%);
       padding: 68px 83px 0 24px;
+      .font(16px, 1.2);
 
       > span {
         display: block;
