--- a/src/less/components/products.less
+++ b/src/less/components/products.less
@@ -1,5 +1,5 @@
-@import "variables";
-@import "mixins";
+@import "../variables";
+@import "../mixins";
 
 .productCarousel {
   padding-top: 20px;
@@ -41,7 +41,7 @@
   }
 
   .productItem {
-    width: 130px;
+    width: 170px;
     padding: 0 20px;
     cursor: pointer;
 
@@ -63,7 +63,7 @@
 
   .productImgBlock {
     padding-top: 80px;
-    height: 120px;
+    height: 190px;
     padding-bottom: 16px;
     .justify-content(center);
     border: 1px solid #f4f2ec;
@@ -88,6 +88,7 @@
   }
 
   .productItemMore {
+    text-decoration: none;
     position: absolute;
     bottom: 0;
     width: 100%;
