--- a/src/less/components/text-block.less
+++ b/src/less/components/text-block.less
@@ -1,5 +1,5 @@
-@import "variables";
-@import "mixins";
+@import "../variables";
+@import "../mixins";
 
 .textHeadingSection {
   background-color: @colorLight;
