add reset and media

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -9,3 +9,7 @@
 
 @fontFamilyDefault: ~"Arial, Helvetica, sans-serif";
 @fontFamilyAharoni: ~'"Roboto", "Lucida Grande", Arial, Helvetica, sans-serif';
+
+@deviceResolution: "979";
+
+@mediaTabletMobile: ~"only screen and (max-width: @{deviceResolution}px)";
