--- a/src/less/components/hero.less
+++ b/src/less/components/hero.less
@@ -7,14 +7,14 @@
   color: @colorLight;
   position: relative;
 
-  h1 {
+  &__h1 {
     .font(53px, 1);
     font-family: @fontFamilyAharoni;
     margin-top: 20px;
     margin-bottom: 20px;
   }
 
-  h2 {
+  &__h2 {
     .font(30px, 1);
   }
 
@@ -52,7 +52,7 @@
     margin-top: 100px;
   }
 
-  .heroFeatures {
+  .heroFeature {
     .font(12px, 1.2, normal);
     .flex-display();
     .flex-direction(column);
@@ -82,6 +82,36 @@
       .font(23px, 1.5, lighter);
     }
   }
+
+  @media @mediaTabletMobile {
+    padding-bottom: 30px;
+
+    .container {
+      text-align: center;
+    }
+
+    &__h2 {
+      font-size: 24px;
+      line-height: 1.2;
+      margin-top: 40px;
+    }
+
+    &__h1 {
+      margin-top: 40px;
+      margin-bottom: 40px;
+    }
+
+    .heroFeaturesBlock {
+      .flex-wrap(wrap);
+      margin-top: 60px;
+    }
+
+    .heroFeature {
+      .flex-basis(33%);
+      border: none !important;
+      text-align: left;
+    }
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -90,10 +120,5 @@
   }
   .heroFeaturesBlock {
     margin-top: 50px;
-  }
-  .heroFeatures:nth-child(4),
-  .heroFeatures:nth-child(5),
-  .heroFeatures:nth-child(6) {
-    display: none;
   }
 }
