--- a/src/less/components/company.less
+++ b/src/less/components/company.less
@@ -14,7 +14,7 @@
     .flex-basis(36%);
   }
 
-  h2 {
+  &__h2 {
     color: @colorGreen;
     text-align: right;
     font-family: @fontFamilyAharoni;
@@ -75,5 +75,31 @@
     .font(16px, 25px, bold);
     color: @colorGreenDark;
     margin-top: 40px;
+  }
+
+  @media @mediaTabletMobile {
+    padding: 60px 0;
+    text-align: center;
+
+    .container {
+      display: block;
+    }
+
+    &__h2 {
+      text-align: center;
+      margin-bottom: 50px;
+      display: inline-block;
+
+      &:after {
+        right: 50%;
+        bottom: -24px;
+        transform: translateX(50%);
+      }
+    }
+
+    .titleBlock {
+      width: 100%;
+      padding: 0;
+    }
   }
 }
