mobile UI for info block

--- a/src/less/components/info-block.less
+++ b/src/less/components/info-block.less
@@ -30,4 +30,29 @@
     background-size: cover;
     background-repeat: no-repeat;
   }
+
+  @media @mediaTabletMobile {
+    padding: 50px 20px;
+    text-align: center;
+
+    .contentBlock {
+      display: block;
+      padding: 0 20px;
+      min-width: 100%;
+    }
+
+    .infoBlock {
+      display: block;
+    }
+
+    .svgRow {
+      img {
+        margin: 0px 20px;
+      }
+    }
+
+    .imageBg {
+      display: none;
+    }
+  }
 }
