add hero fix mobile UI

--- a/src/less/components/hero.less
+++ b/src/less/components/hero.less
@@ -107,6 +107,7 @@
     }
 
     .heroFeature {
+      font-size: 10px;
       .flex-basis(33%);
       border: none !important;
       text-align: left;
