fix info block mobile UI

--- a/src/less/components/info-block.less
+++ b/src/less/components/info-block.less
@@ -46,8 +46,9 @@
     }
 
     .svgRow {
+      .justify-content(space-between);
       img {
-        margin: 0px 20px;
+        margin: 0px;
       }
     }
 
