--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -11,5 +11,7 @@
 @fontFamilyAharoni: ~'"Roboto", "Lucida Grande", Arial, Helvetica, sans-serif';
 
 @deviceResolution: "979";
+@mobResolution: "767";
 
 @mediaTabletMobile: ~"only screen and (max-width: @{deviceResolution}px)";
+@mediaMobile: ~"only screen and (max-width: @{mobResolution}px)";
