text section mobile UI

--- a/src/less/components/text-section.less
+++ b/src/less/components/text-section.less
@@ -14,4 +14,13 @@
     .font(16px, 1.2);
     margin-bottom: 20px;
   }
+
+  @media @mediaTabletMobile {
+    padding: 40px 0;
+
+    .subheader {
+      font-size: 20px;
+      text-align: center;
+    }
+  }
 }
