--- a/src/less/components/columns.less
+++ b/src/less/components/columns.less
@@ -18,6 +18,7 @@
     color: @colorLight;
     height: 93px;
     padding-right: 51px;
+    padding-left: 24px;
 
     span {
       position: relative;
@@ -69,6 +70,39 @@
 
       &:first-child {
         margin-right: auto;
+      }
+    }
+  }
+
+  @media @mediaTabletMobile {
+    .titleBlock {
+      .container {
+        background-color: @colorYellow;
+      }
+    }
+
+    .columnTitle {
+      width: 100%;
+      text-align: center;
+      padding: 0;
+    }
+
+    .mainColumns {
+      .container {
+        .flex-direction(column);
+      }
+
+      .columnText {
+        padding: 20px 0;
+      }
+
+      .yellowBtn {
+        margin: 0 auto;
+      }
+
+      .imagesColBlock {
+        .flex-basis(100%);
+        height: 280px;
       }
     }
   }
