--- a/src/less/components/columns.less
+++ b/src/less/components/columns.less
@@ -102,6 +102,14 @@
 
       .imagesColBlock {
         .flex-basis(100%);
+        height: 500px;
+      }
+    }
+  }
+  
+  @media @mediaMobile {
+    .mainColumns {
+      .imagesColBlock {
         height: 280px;
       }
     }
