add device UI for info block

--- a/src/less/components/info-block.less
+++ b/src/less/components/info-block.less
@@ -45,15 +45,21 @@
       display: block;
     }
 
+    .imageBg {
+      display: none;
+    }
+
+    .svgRow {
+      .justify-content(center);
+    }
+  }
+
+  @media @mediaMobile {
     .svgRow {
       .justify-content(space-between);
       img {
         margin: 0px;
       }
-    }
-
-    .imageBg {
-      display: none;
     }
   }
 }
