--- a/src/less/components/products.less
+++ b/src/less/components/products.less
@@ -61,6 +61,30 @@
     }
   }
 
+  .arrow {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    &:after, &:before {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-right: 1px solid @colorGreen;
+    }
+    
+    &:after {
+      transform: rotate(35deg);
+      bottom: -8%;
+    }
+    
+    &:before {
+      transform: rotate(-35deg);
+      top: -8%;
+    }
+  }
+
   .productImgBlock {
     padding-top: 80px;
     height: 190px;
@@ -123,14 +147,22 @@
 
     .filterBtn {
       margin-right: 5px;
+      line-height: 1.2;
+      height: auto;
+      padding-top: 5px;
+      padding-bottom: 5px;
     }
 
     .slick-next {
-      right: -10px;
+      right: 0px;
     }
 
     .slick-prev {
-      left: -10px;
+      left: 0px;
+    }
+
+    .productItem {
+      padding: 0 25px;
     }
   }
 }
